<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Edit">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/title1"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/date"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="80dp"
                    tools:layout_editor_absoluteY="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/title"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteY="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.747"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <ImageButton
                    android:id="@+id/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:background="@drawable/calendar"
                    android:onClick="setDate"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintStart_toEndOf="@id/calendar"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <EditText
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="44dp"
                    android:ems="10"
                    android:gravity="top|left"
                    android:hint="@string/note"
                    android:inputType="textMultiLine"
                    tools:layout_editor_absoluteX="87dp"
                    tools:layout_editor_absoluteY="44dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.391"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/calendar"
                    />

                <ImageButton
                    android:id="@+id/addpic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/galery"
                    android:onClick="addPicture"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/video"
                    app:layout_constraintTop_toBottomOf="@+id/content" />

                <ImageButton
                    android:id="@+id/video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/video"
                    android:onClick="addVideo"
                    app:layout_constraintStart_toEndOf="@+id/addpic"
                    app:layout_constraintEnd_toStartOf="@id/music"
                    app:layout_constraintTop_toBottomOf="@+id/content" />

                <ImageButton
                    android:id="@+id/music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/music"
                    android:onClick="addMusic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/video"
                    app:layout_constraintTop_toBottomOf="@+id/content" />

                <EditText
                    android:id="@+id/resources"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="35dp"
                    android:hint="@string/resources"
                    android:inputType="textMultiLine"
                    android:gravity="top|left"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteX="87dp"
                    tools:layout_editor_absoluteY="44dp"
                    app:layout_constraintTop_toBottomOf="@id/addpic">
                </EditText>

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="save"
                    android:text="@string/save"
                    app:layout_constraintEnd_toStartOf="@id/cancel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/resources" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="cancel"
                    android:text="@string/cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/save"
                    app:layout_constraintTop_toBottomOf="@id/resources" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>